# DebordoStat

./: .gitattributes  .gitignore  Cargo.toml  README.md  SimConfig.toml  TDGen.py  attack_prob.py  debordo-stats.py  mise.toml  plot_defense_mortality.py  pyproject.toml  validate.py
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
src/: debug.rs  detailed_debug.rs  main.rs  simulate_debug.rs  test.rs
tasks/graph/: check-prerequisites  draw
tasks/nux/: check-prerequisites  compile  run
tasks/sim/: build  compile  draw  run
tasks/win/: compile  run
