[package]
name = "debordo-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
rand_mt = "4.2"
rayon = "1.7"
plotters = "0.3"

[[bin]]
name = "debordo"
path = "src/main.rs"

[[bin]]
name = "debug"
path = "src/debug.rs"

[[bin]]
name = "detailed_debug"
path = "src/detailed_debug.rs"

[[bin]]
name = "simulate_debug"
path = "src/simulate_debug.rs"
