[package]
name = "debordo-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.2"
rand_mt = "5.0.0"
rayon = "1.7"
toml = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }
estimation25 = { git = "https://github.com/Axfalt/estimation25-lib", rev = "v0.1.0" }

[[bin]]
name = "debordo"
path = "src/main.rs"